Update new papers

--- a/researchcn.html
+++ b/researchcn.html
@@ -103,7 +103,7 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（77）</span></h1> SCI总影响因子=191.4，其中一作/通讯总影响因子=158.6</td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（79）</span></h1> SCI总影响因子=199.2，其中一作/通讯总影响因子=166.4</td></tr>
 			<tr><td><table align="left" cellpadding="15">
 			
 				<tr><td>
@@ -187,7 +187,7 @@
 			
 				<tr><td>
 					<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-					<img src="images/4.png" height="15"><img src="images/7.png" height="15">&nbsp;&nbsp;|&nbsp;
+					<img src="images/4.png" height="15"><img src="images/9.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 					<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 				</td></tr>
@@ -265,27 +265,14 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1398703</a>
 				</td></tr>
 			
-			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Multimodal Intelligent Biosensors Framework for Fall Disease Detection and Healthcare Monitoring.</i> Abro, I. A., Alharbi, S. S., Alshammari, N. S., Algarni, S., Almujally, N. A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology. ISSN: 2296-4185.<br>
-					<a href="https://scholar.google.com/scholar?q=Multimodal+Intelligent+Biosensors+Framework+for+Fall+Disease+Detection+and+Healthcare+Monitoring" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1544968" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					<i>A New Synthesized Framework of Artificial Neural Network-Based Sensitivity Analysis for Building Energy Performance: A Case Study of Shanghai, China.</i> Hui Liu*, Yanfeng Wu, Wenbiao Liu, Tingting Xue, Jun Xu (2025). Building and Environment. ISSN: 0360-1323.<br>
 					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-			 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1544968" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1544968</a>
-					-->
-				</td></tr>
-				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Wearable Sensors-based Assistive Technologies for Patient Health Monitoring.</i> Almujally, N. A., Khan, D., Al Mudawi, N., Alonazi, M., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology. ISSN: 2296-4185.<br>
-					<a href=Wearable+Sensors-based+Assistive+Technologies+for+Patient+Health+Monitoring" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1437877" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
-					<!--
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1437877" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1437877</a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 					-->
 				</td></tr>
 				<tr><td>
@@ -298,9 +285,38 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 					-->
 				</td></tr>
-				
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>A Novel Deep Learner for Human Behavior Prediction over Public Video Surveillance.</i> Alabdullah, B, Fatima, B. B., Alhasson, H. F., Alshehri, M., AlQahtani, Y., Albhassabi, N., and Liu, H.* (2025). IEEE Access.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3579749" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3579749</a>
+					-->
+				</td></tr>
+			
+				<tr><td>
+					<i>Wearable Sensors-based Assistive Technologies for Patient Health Monitoring.</i> Almujally, N. A., Khan, D., Al Mudawi, N., Alonazi, M., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology, 13:1437877. ISSN: 2296-4185.<br>
+					<a href=https://scholar.google.com/scholar?q=Wearable+Sensors-based+Assistive+Technologies+for+Patient+Health+Monitoring" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Wearable-sensors-based-assistive-technologies-for-Almujally-Khan/e12e777b87213cc001119eb078eff21ff0b4583f" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/392323004_Wearable_sensors-based_assistive_technologies_for_patient_health_monitoring" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1437877" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1437877" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1437877</a>
+				</td></tr>
+				<tr><td>
+					<i>Multimodal Intelligent Biosensors Framework for Fall Disease Detection and Healthcare Monitoring.</i> Abro, I. A., Alharbi, S. S., Alshammari, N. S., Algarni, S., Almujally, N. A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology, 13:1544968. ISSN: 2296-4185.<br>
+					<a href="https://scholar.google.com/scholar?q=Multimodal+Intelligent+Biosensors+Framework+for+Fall+Disease+Detection+and+Healthcare+Monitoring" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/392695110_Multimodal_Intelligent_Biosensors_Framework_for_Fall_Disease_Detection_and_Healthcare_Monitoring" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1544968" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+			 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1544968" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1544968</a>
+					<!--
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					-->
+				</td></tr>
 				<tr><td>   
-					<i>Towards Human Modeling for Human-Robot Collaboration and Digital Twins in Industrial Environments: Research Status, Prospects, and Challenges.</i> Xia, G.*, Ghrairi, Z., Wuest, T., Hribernik, K., Heuermann, A., Liu, F., Liu, H., Thoben, K. (2025). Robotics and Computer-Integrated Manufacturing.<br>
+					<i>Towards Human Modeling for Human-Robot Collaboration and Digital Twins in Industrial Environments: Research Status, Prospects, and Challenges.</i> Xia, G.*, Ghrairi, Z., Wuest, T., Hribernik, K., Heuermann, A., Liu, F., Liu, H., Thoben, K. (2025). Robotics and Computer-Integrated Manufacturing, 95:103043.<br>
 					<a href="https://scholar.google.com/scholar?q=Towards+Human+Modeling+for+Human-Robot+Collaboration+and+Digital+Twins+in+Industrial+Environments%3A+Research+Status%2C+Prospects%2C+and+Challenges" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Towards-Human-Modeling-for-Human-Robot-and-Digital-Xia-Ghrairi/e0045bf565ed6c1bafb14d880478802d6dedd835" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/391344160_Towards_Human_Modeling_for_Human-Robot_Collaboration_and_Digital_Twins_in_Industrial_Environments_Research_Status_Prospects_and_Challenges" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -1293,7 +1309,8 @@
 					<tr><td>2024</td><td>Hannes Wehrmann</td><td>Adaption von Musik an die Bewegungsdaten beim Laufen – Implementation und Validierung von ML-Algorithmen für Android-Applikationen</td></tr>
 					<tr><td>2024</td><td>Shiyao Zhang</td><td>Real-Time Artifact Recognition during ECG Acquisition</td></tr>
 					<tr><td>2024</td><td>Finn Redel</td><td>Entwicklung eines ereignisgesteuerten, verteilten Analyseframeworks für Chromatographiegerätedaten</td></tr>
-					<tr><td>2024</td><td>Arthur Belousov</td><td>Melody-Based Songs’ Singing　Difficulty Analysis: Feature and Scoring Design, Web Platform Implementation, and Field Usability Study</td></tr>
+					<tr><td>2024</td><td>Arthur Belousov</td><td>Melody-Based Songs’ Singing Difficulty Analysis: Feature and Scoring Design, Web Platform Implementation, and Field Usability Study</td></tr>
+					<tr><td>2025</td><td>Shiyao Zhang</td><td>Artifact Recognition of Biosignals: A Research Framework and Its Validation EMG of Real Time Artifact Recognition during Biosignals Acquisition</td></tr>
 				</table></td></tr>
 			</table></td></tr>
 
