--- a/publications.html
+++ b/publications.html
@@ -101,7 +101,7 @@
 
 	<tr><td>
 		<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-		<img src="images/4.png" height="15"><img src="images/9.png" height="15">&nbsp;&nbsp;|&nbsp;
+		<img src="images/5.png" height="15"><img src="images/0.png" height="15">&nbsp;&nbsp;|&nbsp;
 		<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 		<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 	</td></tr>
@@ -199,18 +199,23 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 		-->
 	</td></tr>
+
 	<tr><td>
-		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>A Novel Deep Learner for Human Behavior Prediction over Public Video Surveillance.</i> Alabdullah, B, Fatima, B. B., Alhasson, H. F., Alshehri, M., AlQahtani, Y., Albhassabi, N., and Liu, H.* (2025). IEEE Access.<br>
-		<!--
-		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<i>Intelligent Biosensors for Human Movement Rehabilitation and Intention Recognition.</i> Rafiq, M., Almujally, N., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology, 13:1558529. ISSN: 2296-4185.<br>
+		<!--<a href=https://scholar.google.com/scholar?q=Intelligent+Biosensors+for+Human+Movement+Rehabilitation+and+Intention+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3579749" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3579749</a>
-		-->
+		&nbsp;&nbsp;&nbsp;&nbsp;--><a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1558529" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1558529" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1558529</a>
 	</td></tr>
-
+	<tr><td>
+		<i>A Novel Deep Learner for Human Behavior Prediction over Public Video Surveillance.</i> Alabdullah, B, Fatima, B. B., Alhasson, H. F., Alshehri, M., AlQahtani, Y., Albhassabi, N., and Liu, H.* (2025). IEEE Access.<br>
+		<!--<a href="https://scholar.google.com/scholar?q=A+Novel+Deep+Learner+for+Human+Behavior+Prediction+over+Public+Video+Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;--><a href="https://www.researchgate.net/publication/392742279_A_Novel_Deep_Learner_for_Human_Behavior_Prediction_over_Public_Video_Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/11036735" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3579749" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3579749</a>
+	</td></tr>
 	<tr><td>
 		<i>Wearable Sensors-based Assistive Technologies for Patient Health Monitoring.</i> Almujally, N. A., Khan, D., Al Mudawi, N., Alonazi, M., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology, 13:1437877. ISSN: 2296-4185.<br>
 		<a href=https://scholar.google.com/scholar?q=Wearable+Sensors-based+Assistive+Technologies+for+Patient+Health+Monitoring" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
