--- a/publications.html
+++ b/publications.html
@@ -181,16 +181,6 @@
 
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>A New Synthesized Framework of Artificial Neural Network-Based Sensitivity Analysis for Building Energy Performance: A Case Study of Shanghai, China.</i> Hui Liu*, Yanfeng Wu, Wenbiao Liu, Tingting Xue, Jun Xu (2025). Building and Environment. ISSN: 0360-1323.<br>
-		<!--
-		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-		-->
-	</td></tr>
-	<tr><td>
-		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>A Hybrid Deep Learning Pipeline for Wearable Sensors-based Human Activity Recognition.</i> Algarni, A., Abro, I. A., Alshehri, M., AlQahtani, Y., Alshahrani, A., and Liu, H.* (2025). Computer, Materials & Continuah. Tech Science Press. ISSN: 1546-2218.<br>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -199,20 +189,34 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 		-->
 	</td></tr>
-
+	<tr><td>
+		<i>A New Synthesized Framework of Artificial Neural Network-Based Sensitivity Analysis for Building Energy Performance: A Case Study of Shanghai, China.</i> Hui Liu*, Yanfeng Wu, Wenbiao Liu, Tingting Xue, Jun Xu (2025). Building and Environment. ISSN: 0360-1323.<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;
+		-->
+		<a href="https://www.researchgate.net/publication/392848290_A_new_synthesized_framework_of_artificial_neural_network-based_sensitivity_analysis_for_building_energy_performance_A_case_study_of_Shanghai_China" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S036013232500770X" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.buildenv.2025.113290" target="_blank" rel="noopener noreferrer">10.1016/j.buildenv.2025.113290</a>
+	</td></tr>
 	<tr><td>
 		<i>Intelligent Biosensors for Human Movement Rehabilitation and Intention Recognition.</i> Rafiq, M., Almujally, N., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology, 13:1558529. ISSN: 2296-4185.<br>
-		<!--<a href=https://scholar.google.com/scholar?q=Intelligent+Biosensors+for+Human+Movement+Rehabilitation+and+Intention+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<a href=https://scholar.google.com/scholar?q=Intelligent+Biosensors+for+Human+Movement+Rehabilitation+and+Intention+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<!--
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;--><a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1558529" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		-->
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1558529" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1558529" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1558529</a>
 	</td></tr>
 	<tr><td>
 		<i>A Novel Deep Learner for Human Behavior Prediction over Public Video Surveillance.</i> Alabdullah, B, Fatima, B. B., Alhasson, H. F., Alshehri, M., AlQahtani, Y., Albhassabi, N., and Liu, H.* (2025). IEEE Access.<br>
-		<!--<a href="https://scholar.google.com/scholar?q=A+Novel+Deep+Learner+for+Human+Behavior+Prediction+over+Public+Video+Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=A+Novel+Deep+Learner+for+Human+Behavior+Prediction+over+Public+Video+Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<!--
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;--><a href="https://www.researchgate.net/publication/392742279_A_Novel_Deep_Learner_for_Human_Behavior_Prediction_over_Public_Video_Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		-->
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/392742279_A_Novel_Deep_Learner_for_Human_Behavior_Prediction_over_Public_Video_Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/11036735" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3579749" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3579749</a>
 	</td></tr>
@@ -227,12 +231,10 @@
 	<tr><td>
 		<i>Multimodal Intelligent Biosensors Framework for Fall Disease Detection and Healthcare Monitoring.</i> Abro, I. A., Alharbi, S. S., Alshammari, N. S., Algarni, S., Almujally, N. A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology, 13:1544968. ISSN: 2296-4185.<br>
 		<a href="https://scholar.google.com/scholar?q=Multimodal+Intelligent+Biosensors+Framework+for+Fall+Disease+Detection+and+Healthcare+Monitoring" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Multimodal-intelligent-biosensors-framework-for-and-Abro-Alharbi/8d1b34e034e648299ac16f29be1993d2dc68409a" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/392695110_Multimodal_Intelligent_Biosensors_Framework_for_Fall_Disease_Detection_and_Healthcare_Monitoring" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1544968" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
  		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1544968" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1544968</a>
-		<!--
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		-->
 	</td></tr>
 	<tr><td>   
 		<i>Towards Human Modeling for Human-Robot Collaboration and Digital Twins in Industrial Environments: Research Status, Prospects, and Challenges.</i> Xia, G.*, Ghrairi, Z., Wuest, T., Hribernik, K., Heuermann, A., Liu, F., Liu, H., Thoben, K. (2025). Robotics and Computer-Integrated Manufacturing, 95:103043.<br>
