--- a/publications.html
+++ b/publications.html
@@ -101,7 +101,7 @@
 
 	<tr><td>
 		<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-		<img src="images/5.png" height="15"><img src="images/0.png" height="15">&nbsp;&nbsp;|&nbsp;
+		<img src="images/5.png" height="15"><img src="images/4.png" height="15">&nbsp;&nbsp;|&nbsp;
 		<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 		<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 	</td></tr>
@@ -181,7 +181,7 @@
 
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>A Hybrid Deep Learning Pipeline for Wearable Sensors-based Human Activity Recognition.</i> Algarni, A., Abro, I. A., Alshehri, M., AlQahtani, Y., Alshahrani, A., and Liu, H.* (2025). Computer, Materials & Continuah. Tech Science Press. ISSN: 1546-2218.<br>
+		<i>Integrated Neural Network Framework for Multi-Object Detection and Recognition Using UAV Imagery.</i> Alshehri, M., Xue, T., Mujtaba, G., Alqahtani, Y., Almujally, N., Jalal, A.*, Liu, H.* (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -190,13 +190,51 @@
 		-->
 	</td></tr>
 	<tr><td>
-		<i>A New Synthesized Framework of Artificial Neural Network-Based Sensitivity Analysis for Building Energy Performance: A Case Study of Shanghai, China.</i> Hui Liu*, Yanfeng Wu, Wenbiao Liu, Tingting Xue, Jun Xu (2025). Building and Environment. ISSN: 0360-1323.<br>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>A Novel Multi-Modal Rehabilitation Monitoring Over Human Motion Intention Recognition.</i> Kamal, S., Alshehri, M., Alqahtani, Y., Alshahrani, A., Almujally, N., Jalal, A.*, Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology. ISSN: 2296-4185.<br>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 		-->
-		<a href="https://www.researchgate.net/publication/392848290_A_new_synthesized_framework_of_artificial_neural_network-based_sensitivity_analysis_for_building_energy_performance_A_case_study_of_Shanghai_China" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+	</td></tr>
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>A Hybrid Deep Learning Pipeline for Wearable Sensors-based Human Activity Recognition.</i> Algarni, A., Abro, I. A., Alshehri, M., AlQahtani, Y., Alshahrani, A., and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+	</td></tr>
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Aerial Images for Intelligent Vehicle Detection and Classification via YOLOv11 and Deep Learner.</i> Mujtaba, G., Liu, W., Alshehri, M., AlQahtani, Y., Almujally, N. A., and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+	</td></tr>
+	<tr><td>
+		<i>ANN-Assisted Optimization of a Solar-to-X System for Green Hydrogen Production, CO₂ Capture, and Methanol-Based Energy Storage.</i> Liu, H.*, Liu, W., Wu, Y., Du, Z., Xue, T., Manesh A. M., Xu, J*, and Jiang, T.* (2025). Energy. Elsevier. ISSN: 0360-5442.<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=ANN-Assisted+Optimization+of+a+Solar-to-X+System+for+Green+Hydrogen+Production%2C+CO2+Capture%2C+and+Methanol-Based+Energy+Storage" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;
+		--><a href="https://www.researchgate.net/publication/393284049_ANN-Assisted_Optimization_of_a_Solar-to-X_System_for_Green_Hydrogen_Production_CO2_Capture_and_Methanol-Based_Energy_Storage" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S0360544225029925" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.energy.2025.137350" target="_blank" rel="noopener noreferrer">10.1016/j.energy.2025.137350</a>
+	</td></tr>
+
+	<tr><td>
+		<i>A New Synthesized Framework of Artificial Neural Network-Based Sensitivity Analysis for Building Energy Performance: A Case Study of Shanghai, China.</i> Hui Liu*, Yanfeng Wu, Wenbiao Liu, Tingting Xue, Jun Xu (2025). Building and Environment. Elsevier, 283:113290. ISSN: 0360-1323.<br>
+		<a href="https://scholar.google.com/scholar?q=A+new+synthesized+framework+of+artificial+neural+network-based+sensitivity+analysis+for+building+energy+performance%3A+A+case+study+of+Shanghai" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/A-new-synthesized-framework-of-artificial-neural-A-Liu-Wu/35a093fac14243a3218d9ba045e9f02e11db47ef" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/392848290_A_new_synthesized_framework_of_artificial_neural_network-based_sensitivity_analysis_for_building_energy_performance_A_case_study_of_Shanghai_China" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S036013232500770X" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.buildenv.2025.113290" target="_blank" rel="noopener noreferrer">10.1016/j.buildenv.2025.113290</a>
 	</td></tr>
@@ -211,11 +249,9 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1558529" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1558529</a>
 	</td></tr>
 	<tr><td>
-		<i>A Novel Deep Learner for Human Behavior Prediction over Public Video Surveillance.</i> Alabdullah, B, Fatima, B. B., Alhasson, H. F., Alshehri, M., AlQahtani, Y., Albhassabi, N., and Liu, H.* (2025). IEEE Access.<br>
+		<i>A Novel Deep Learner for Human Behavior Prediction over Public Video Surveillance.</i> Alabdullah, B, Fatima, B. B., Alhasson, H. F., Alshehri, M., AlQahtani, Y., Albhassabi, N., and Liu, H.* (2025). IEEE Access, 13:108718-108731.<br>
 		<a href="https://scholar.google.com/scholar?q=A+Novel+Deep+Learner+for+Human+Behavior+Prediction+over+Public+Video+Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		<!--
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		-->
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/A-Novel-Deep-Learner-for-Human-Behavior-Prediction-Alabdullah-Fatima/89ed33d1b67479759961f8cb573781afa244cfed" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/392742279_A_Novel_Deep_Learner_for_Human_Behavior_Prediction_over_Public_Video_Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/11036735" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3579749" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3579749</a>
@@ -245,7 +281,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.rcim.2025.103043" target="_blank" rel="noopener noreferrer">10.1016/j.rcim.2025.103043</a>
 	</td></tr>
 	<tr><td>
-		<i>Advanced Leaf Classification using Multi-Layer Perceptron for Smart Crop Management.</i> Mumtaz S., Alshehri M., AlQahtani Y., Alshahrani A., Alabdullah, B., Alhasson, H. F., Jalal, A.*, and Liu, H.* (2025). IEEE Access.<br>
+		<i>Advanced Leaf Classification using Multi-Layer Perceptron for Smart Crop Management.</i> Mumtaz S., Alshehri M., AlQahtani Y., Alshahrani A., Alabdullah, B., Alhasson, H. F., Jalal, A.*, and Liu, H.* (2025). IEEE Access, 13:105579-105589.<br>
 		<a href="https://scholar.google.com/scholar?q=Advanced+Leaf+Classification+using+Multi-Layer+Perceptron+for+Smart+Crop+Management" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Advanced-Leaf-Classification-using-Multi-Layer-for-Mumtaz-Alshehri/44e3d0856aa58ec611b26a35cd48fc79a955615d" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/392040833_Advanced_Leaf_Classification_using_Multi-Layer_Perceptron_for_Smart_Crop_Management" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
