--- a/publications.html
+++ b/publications.html
@@ -182,22 +182,24 @@
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Integrated Neural Network Framework for Multi-Object Detection and Recognition Using UAV Imagery.</i> Alshehri, M., Xue, T., Mujtaba, G., Alqahtani, Y., Almujally, N., Jalal, A.*, Liu, H.* (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
+		<a href="https://scholar.google.com/scholar?q=Integrated+Neural+Network+Framework+for+Multi-Object+Detection+and+Recognition+Using+UAV+Imagery" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		<!--
-		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 		-->
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1643011" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1643011" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1643011</a>
 	</td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>A Novel Multi-Modal Rehabilitation Monitoring Over Human Motion Intention Recognition.</i> Kamal, S., Alshehri, M., Alqahtani, Y., Alshahrani, A., Almujally, N., Jalal, A.*, Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology. ISSN: 2296-4185.<br>
+		<a href="https://scholar.google.com/scholar?q=A+Novel+Multi-Modal+Rehabilitation+Monitoring+Over+Human+Motion+Intention+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		<!--
-		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 		-->
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1568690" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1568690" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1568690</a>
 	</td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
@@ -221,17 +223,15 @@
 	</td></tr>
 	<tr><td>
 		<i>ANN-Assisted Optimization of a Solar-to-X System for Green Hydrogen Production, CO₂ Capture, and Methanol-Based Energy Storage.</i> Liu, H.*, Liu, W., Wu, Y., Du, Z., Xue, T., Manesh A. M., Xu, J*, and Jiang, T.* (2025). Energy. Elsevier. ISSN: 0360-5442.<br>
-		<!--
 		<a href="https://scholar.google.com/scholar?q=ANN-Assisted+Optimization+of+a+Solar-to-X+System+for+Green+Hydrogen+Production%2C+CO2+Capture%2C+and+Methanol-Based+Energy+Storage" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;
-		--><a href="https://www.researchgate.net/publication/393284049_ANN-Assisted_Optimization_of_a_Solar-to-X_System_for_Green_Hydrogen_Production_CO2_Capture_and_Methanol-Based_Energy_Storage" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/ANN-Assisted-Optimization-of-a-Solar-to-X-System-Liu-Liu/3bd6393294dcff48fc1198229233feb31e66698e" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/393284049_ANN-Assisted_Optimization_of_a_Solar-to-X_System_for_Green_Hydrogen_Production_CO2_Capture_and_Methanol-Based_Energy_Storage" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S0360544225029925" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.energy.2025.137350" target="_blank" rel="noopener noreferrer">10.1016/j.energy.2025.137350</a>
 	</td></tr>
 
 	<tr><td>
-		<i>A New Synthesized Framework of Artificial Neural Network-Based Sensitivity Analysis for Building Energy Performance: A Case Study of Shanghai, China.</i> Hui Liu*, Yanfeng Wu, Wenbiao Liu, Tingting Xue, Jun Xu (2025). Building and Environment. Elsevier, 283:113290. ISSN: 0360-1323.<br>
+		<i>A New Synthesized Framework of Artificial Neural Network-Based Sensitivity Analysis for Building Energy Performance: A Case Study of Shanghai, China.</i> Hui Liu*, Yanfeng Wu, Wenbiao Liu, Tingting Xue, Jun Xu (2025). Building and Environment, 283:113290. Elsevier. ISSN: 0360-1323.<br>
 		<a href="https://scholar.google.com/scholar?q=A+new+synthesized+framework+of+artificial+neural+network-based+sensitivity+analysis+for+building+energy+performance%3A+A+case+study+of+Shanghai" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/A-new-synthesized-framework-of-artificial-neural-A-Liu-Wu/35a093fac14243a3218d9ba045e9f02e11db47ef" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/392848290_A_new_synthesized_framework_of_artificial_neural_network-based_sensitivity_analysis_for_building_energy_performance_A_case_study_of_Shanghai_China" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -243,8 +243,8 @@
 		<a href=https://scholar.google.com/scholar?q=Intelligent+Biosensors+for+Human+Movement+Rehabilitation+and+Intention+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		<!--
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		-->
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/393557563_Intelligent_biosensors_for_human_movement_rehabilitation_and_intention_recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1558529" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1558529" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1558529</a>
 	</td></tr>
