--- a/research.html
+++ b/research.html
@@ -276,27 +276,6 @@
 				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>A Novel Multi-Modal Rehabilitation Monitoring Over Human Motion Intention Recognition.</i> Kamal, S., Alshehri, M., Alqahtani, Y., Alshahrani, A., Almujally, N., Jalal, A.*, Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology. ISSN: 2296-4185.<br>
-					<a href="https://scholar.google.com/scholar?q=A+Novel+Multi-Modal+Rehabilitation+Monitoring+Over+Human+Motion+Intention+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					<!--
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					-->
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1568690" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1568690" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1568690</a>
-				</td></tr>
-				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>A Hybrid Deep Learning Pipeline for Wearable Sensors-based Human Activity Recognition.</i> Algarni, A., Abro, I. A., Alshehri, M., AlQahtani, Y., Alshahrani, A., and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
-					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-					-->
-				</td></tr>
-				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Aerial Images for Intelligent Vehicle Detection and Classification via YOLOv11 and Deep Learner.</i> Mujtaba, G., Liu, W., Alshehri, M., AlQahtani, Y., Almujally, N. A., and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -305,15 +284,15 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 					-->
 				</td></tr>
+			
 				<tr><td>
-					<i>ANN-Assisted Optimization of a Solar-to-X System for Green Hydrogen Production, CO₂ Capture, and Methanol-Based Energy Storage.</i> Liu, H.*, Liu, W., Wu, Y., Du, Z., Xue, T., Manesh A. M., Xu, J*, and Jiang, T.* (2025). Energy. Elsevier. ISSN: 0360-5442.<br>
+					<i>ANN-Assisted Optimization of a Solar-to-X System for Green Hydrogen Production, CO₂ Capture, and Methanol-Based Energy Storage.</i> Liu, H.*, Liu, W., Wu, Y., Du, Z., Xue, T., Manesh A. M., Xu, J*, and Jiang, T.* (2025). Energy, 333:137350. Elsevier. ISSN: 0360-5442.<br>
 					<a href="https://scholar.google.com/scholar?q=ANN-Assisted+Optimization+of+a+Solar-to-X+System+for+Green+Hydrogen+Production%2C+CO2+Capture%2C+and+Methanol-Based+Energy+Storage" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/ANN-Assisted-Optimization-of-a-Solar-to-X-System-Liu-Liu/3bd6393294dcff48fc1198229233feb31e66698e" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/393284049_ANN-Assisted_Optimization_of_a_Solar-to-X_System_for_Green_Hydrogen_Production_CO2_Capture_and_Methanol-Based_Energy_Storage" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S0360544225029925" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.energy.2025.137350" target="_blank" rel="noopener noreferrer">10.1016/j.energy.2025.137350</a>
 				</td></tr>
-			
 				<tr><td>
 					<i>A New Synthesized Framework of Artificial Neural Network-Based Sensitivity Analysis for Building Energy Performance: A Case Study of Shanghai, China.</i> Hui Liu*, Yanfeng Wu, Wenbiao Liu, Tingting Xue, Jun Xu (2025). Building and Environment, 283:113290. Elsevier. ISSN: 0360-1323.<br>
 					<a href="https://scholar.google.com/scholar?q=A+new+synthesized+framework+of+artificial+neural+network-based+sensitivity+analysis+for+building+energy+performance%3A+A+case+study+of+Shanghai" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -321,6 +300,27 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/392848290_A_new_synthesized_framework_of_artificial_neural_network-based_sensitivity_analysis_for_building_energy_performance_A_case_study_of_Shanghai_China" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S036013232500770X" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.buildenv.2025.113290" target="_blank" rel="noopener noreferrer">10.1016/j.buildenv.2025.113290</a>
+				</td></tr>
+				<tr><td>
+					<i>A Hybrid Deep Learning Pipeline for Wearable Sensors-based Human Activity Recognition.</i> Algarni, A., Abro, I. A., Alshehri, M., AlQahtani, Y., Alshahrani, A., and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;
+					-->
+					<a href="https://www.researchgate.net/publication/393667197_A_Hybrid_Deep_Learning_Pipeline_for_Wearable_Sensors-Based_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.techscience.com/cmc/online/detail/23774" target="_blank" rel="noopener noreferrer"><img src="images/Tech_Science_Press.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.32604/cmc.2025.064601" target="_blank" rel="noopener noreferrer">10.32604/cmc.2025.064601</a>
+				</td></tr>
+				<tr><td>
+					<i>A Novel Multi-Modal Rehabilitation Monitoring Over Human Motion Intention Recognition.</i> Kamal, S., Alshehri, M., Alqahtani, Y., Alshahrani, A., Almujally, N., Jalal, A.*, Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology, 13:1568690. ISSN: 2296-4185.<br>
+					<a href="https://scholar.google.com/scholar?q=A+Novel+Multi-Modal+Rehabilitation+Monitoring+Over+Human+Motion+Intention+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<!--
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					-->
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/393775118_A_novel_multi-modal_rehabilitation_monitoring_over_human_motion_intention_recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1568690" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1568690" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1568690</a>
 				</td></tr>
 				<tr><td>
 					<i>Intelligent Biosensors for Human Movement Rehabilitation and Intention Recognition.</i> Rafiq, M., Almujally, N., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology, 13:1558529. ISSN: 2296-4185.<br>
@@ -381,7 +381,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1430222" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1430222</a>
 				</td></tr>
 				<tr><td>
-					<i>A Deep Learning Framework for Healthy LifeStyle Monitoring and Outdoor Localization.</i> Rafiq, M., Albhassabi, N., Alhasson, H. F., AlHammadi, D. A., Alshehri, M., Jalal, A.*, and Liu, H.* (2025). IEEE Access.<br>
+					<i>A Deep Learning Framework for Healthy LifeStyle Monitoring and Outdoor Localization.</i> Rafiq, M., Albhassabi, N., Alhasson, H. F., AlHammadi, D. A., Alshehri, M., Jalal, A.*, and Liu, H.* (2025). IEEE Access, 13:118695-118705.<br>
 					<a href="https://scholar.google.com/scholar?q=A+Deep+Learning+Framework+for+Healthy+LifeStyle+Monitoring+and+Outdoor+Localization" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/A-Deep-Learning-Framework-for-Healthy-LifeStyle-and-Rafiq-Alshammari/e0cda5a47821a8322c3994f5ee7fa0779e685ac1" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/392155986_A_Deep_Learning_Framework_for_Healthy_LifeStyle_Monitoring_and_Outdoor_Localization" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
